add comment and image in post

--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 test_forms
-Напишите тест для проверки формы создания нового поста (страница /new/): убедитесь, что при отправке формы создаётся новая запись в базе данных.
+√Напишите тест для проверки формы создания нового поста (страница /new/): убедитесь, что при отправке формы создаётся новая запись в базе данных.
 Допишите новые тесты:
-Проверьте, что при редактировании поста через форму на странице /<username>/<post_id>/edit/ изменяется соответствующая запись в базе данных.
+√Проверьте, что при редактировании поста через форму на странице /<username>/<post_id>/edit/ изменяется соответствующая запись в базе данных.
 
 
 test_views
